Pending changes in the mainline
===============================

* Performance warning if runtime debug assertions are turned on


Version 2.2 (2016-06-28)
========================

* Option "EnableGdcm" to replace the built-in decoder of Orthanc with GDCM
* Option "RestrictTransferSyntaxes" saying which transfer syntaxes should be decoded with GDCM
* Fixed rendering of 16bpp images if values are < 0 or >= 32768
* Decoding of JPEG2000 lossless images with YBR_RCT photometric interpretation


Version 2.1 (2015-12-10)
========================

* Automatic clearing of the cache if change in the version of Orthanc or of the plugin


Version 2.0 (2015-12-02)
========================

=> Minimum SDK version: 0.9.5 <=

* The GDCM decoder replaces the built-in Orthanc decoder inside Orthanc Explorer
* Support of multi-frame images
* Upgrade to Cornerstone 0.8.4


Version 1.3 (2015-11-27)
========================

=> Minimum SDK version: 0.9.4 <=

* Support of images encoded using LUT (lookup tables)
* Use Orthanc's primitives for PNG and JPEG
* Fix for old versions of jQuery
* Fix possible deadlock with other plugins in OnChangeCallback()
* Upgrade to GDCM 2.6.0 for static builds
* Upgrade to Boost 1.59.0 for static builds


Version 1.2 (2015-08-02)
========================

=> Minimum SDK version: 0.9.1 <=

* Update to Boost 1.58.0 for static and Windows builds
* Inject version information into Windows binaries
* Support of OS X


Version 1.1 (2015-07-03)
========================

* Support of Visual Studio 2008
* Support of FreeBSD
* Fix issue 29 (support of photometric interpretation YBR_FULL_422)


Version 1.0 (2015-02-27)
========================

* Configuration options


2015-02-25
==========

* Initial release