@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Performance warning if runtime debug assertions are turned on
+* Fix issue 44 (Bad interpretation of photometric interpretation MONOCHROME1)
 
 
 Version 2.2 (2016-06-28)
